<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_marginTop="30dp"
        android:layout_height="150dp"
        android:alpha="0.95"
        android:background="@drawable/dialog_box"
        android:gravity="center_vertical|center_horizontal"
        android:maxLines="3"
        android:paddingTop="15dp"
        android:paddingBottom="75dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:scrollbars="vertical"
        android:shadowColor="#999900"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="30"
        android:text=""
        android:textColor="#FFEB3B"
        android:textSize="24sp"
        android:textStyle="bold"
        tools:scrollable="true" />

    <ImageView
        android:id="@+id/logoView"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:scaleType="fitCenter"
        android:src="@drawable/main_logo_2" />
    <FrameLayout
        android:id="@+id/layoutBtn"
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView"
        android:layout_centerHorizontal="true"
        >

        <ImageButton
            android:id="@+id/btnDialog"
            android:layout_width="200dp"
            android:layout_height="70dp"
            android:alpha="0.9"
            android:background="@null"
            android:contentDescription="@string/tap_to_start_the_game"
            android:onClick="onStartQuizClicked"
            android:scaleType="fitXY"
            android:soundEffectsEnabled="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/button_state_blue_1" />
        <TextView
            android:id="@+id/txtDialogOnButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ok"
            android:textColor="#dddddd"
            android:textSize="30sp"
            android:layout_gravity="center"
            android:clickable="false"
            />
    </FrameLayout>

    <TextView
        android:id="@+id/txtDialogCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_below="@id/layoutBtn"
        android:layout_centerHorizontal="true"
        android:text="@string/cancel"
        android:textSize="25sp"
        />

</RelativeLayout>