<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:id="@+id/scrollView"
    android:background="@drawable/background">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <FrameLayout
            android:id="@+id/layoutTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_alignParentTop="true"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:alpha="0.5"
                android:background="#000000" />
            <ImageView
                android:id="@+id/textIcon"
                android:layout_width="wrap_content"
                android:contentDescription="@string/cryptothon_title"
                android:layout_height="50dp"
                android:alpha=".9"
                android:layout_gravity="center"
                app:srcCompat="@drawable/cryptothon_text" />

        </FrameLayout>

        <RelativeLayout
            android:id="@+id/form"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:gravity="center"
            app:layout_constraintBottom_toTopOf="@+id/hintUI"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layoutTitle">

            <com.google.android.material.progressindicator.CircularProgressIndicator
                android:id="@+id/spinner"
                style="@style/Widget.App.CircularProgressIndicator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_gravity="center"
                android:indeterminate="true" />

            <!--        <com.google.android.material.textfield.TextInputLayout-->
            <!--            android:id="@+id/timer"-->
            <!--            android:layout_width="150dp"-->
            <!--            android:layout_height="wrap_content"-->
            <!--            android:layout_toEndOf="@id/teamname"-->
            <!--            android:hint="Timer"-->
            <!--            android:layout_marginLeft="50px"-->
            <!--            >-->

            <!--            <com.google.android.material.textfield.TextInputEditText-->
            <!--                android:layout_width="150dp"-->
            <!--                android:layout_height="wrap_content" />-->

            <!--        </com.google.android.material.textfield.TextInputLayout>-->


            <TextView
                android:id="@+id/lblTimer"
                android:layout_width="150dp"
                android:layout_height="wrap_content"

                android:layout_toEndOf="@id/teamname"
                android:gravity="end"
                android:text="@string/_00_00_00"
                android:textColor="#F4C2C2"
                android:textSize="25sp" />

<!--            <ImageView-->
<!--                android:id="@+id/gif"-->
<!--                android:layout_width="70dp"-->
<!--                android:layout_height="250dp"-->
<!--                android:layout_below="@id/lblTimer"-->
<!--                android:layout_alignRight="@id/lblLevel"-->
<!--                android:layout_alignParentEnd="true" />-->


            <!--        <com.google.android.material.textfield.TextInputLayout-->
            <!--            android:id="@+id/teamname"-->
            <!--            android:layout_width="150dp"-->
            <!--            android:layout_height="wrap_content"-->
            <!--            >-->

            <!--            <com.google.android.material.textfield.TextInputEditText-->

            <!--                android:id="@+id/teamnameText"-->
            <!--                android:layout_width="match_parent"-->
            <!--                android:layout_height="wrap_content"-->
            <!--                android:enabled="false"-->
            <!--                android:focusable="false"-->
            <!--                android:textColor="#FFFFFF" />-->

            <!--        </com.google.android.material.textfield.TextInputLayout>-->

            <TextView
                android:id="@+id/teamname"
                android:layout_width="199dp"
                android:minHeight="48dp"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:onClick="lblTeamNameClickShowDeviceId"
                android:text="@string/team_name"
                android:textColor="#38B6FF"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/hintview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/teamname"
                android:gravity="center"
                android:text="HINT"
                android:textColor="#ffffff"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/lblLevel"
                android:layout_width="199dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/teamname"
                android:layout_alignParentEnd="true"
                android:gravity="end"
                android:text=""
                android:textColor="#ffffff"
                android:textSize="24sp" />

            <!--        <com.google.android.material.textfield.TextInputLayout-->
            <!--            android:id="@+id/ranking"-->
            <!--            android:layout_width="150dp"-->
            <!--            android:layout_height="wrap_content"-->
            <!--            android:layout_below="@id/teamname"-->
            <!--            android:hint="Ranking"-->
            <!--            app:hintTextColor="#FFFFFF"-->
            <!--            >-->

            <!--            <com.google.android.material.textfield.TextInputEditText-->
            <!--                android:id="@+id/rankingText"-->
            <!--                android:layout_width="match_parent"-->
            <!--                android:layout_height="wrap_content"-->
            <!--                android:enabled="false"-->
            <!--                android:focusable="false"-->
            <!--                android:textColor="#FFFFFF" />-->

            <!--        </com.google.android.material.textfield.TextInputLayout>-->

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/question"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/lblLevel"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="20dp"
                android:hint="@string/question"
                app:hintTextAppearance="@style/CustomTextInputLayoutHintText"
                android:textColorHint="#ffffff">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/lblQuestion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="120dp"
                    android:cursorVisible="false"
                    android:focusable="false"
                    android:scrollbars="vertical"
                    android:textColor="#ffffff"
                    android:fontFamily="@font/font1"
                    android:textSize="18sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/lytAnswer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/question"
                android:hint="@string/answer"
                android:textColorHint="#ffffff"
                app:counterTextColor="@color/white"
                app:counterEnabled="true"
                app:counterMaxLength="10"
                app:counterTextAppearance="@style/CustomCounterTextAppearance"
                app:endIconMode="clear_text">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtAnswer"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:imeOptions="actionGo"
                    android:inputType="text|textPersonName"
                    android:textColor="#ffffff"
                    android:fontFamily="@font/font1"
                    android:textSize="20sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <FrameLayout
                android:id="@+id/layoutBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/lytAnswer"
                android:layout_centerHorizontal="true"
                >

                <ImageButton
                    android:id="@+id/btnSubmit"
                    android:layout_width="200dp"
                    android:layout_height="70dp"
                    android:layout_gravity="center"
                    android:alpha="0.9"
                    android:background="@null"
                    android:contentDescription="@string/tap_to_login_into_game"
                    android:onClick="btnClickedSubmit"
                    android:scaleType="fitXY"
                    android:soundEffectsEnabled="false"
                    app:srcCompat="@drawable/button_state_blue" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/submit"
                    android:textColor="#dddddd"
                    android:textSize="20sp"
                    android:layout_gravity="center"
                    android:clickable="false"
                    />
            </FrameLayout>

        </RelativeLayout>


        <RelativeLayout
            android:id="@+id/hintUI"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/form"
            android:layout_marginTop="16dp"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/form">

            <FrameLayout
                android:id="@+id/layoutBtnHint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="16dp">

                <ImageButton
                    android:id="@+id/btnUnlockHint"
                    android:layout_width="200dp"
                    android:layout_height="48dp"
                    android:layout_gravity="center"
                    android:alpha="0.9"
                    android:background="@null"
                    android:contentDescription="@string/tap_to_login_into_game"
                    android:onClick="btnUnlockHint"
                    android:scaleType="fitXY"
                    android:soundEffectsEnabled="false"
                    android:visibility="visible"
                    app:srcCompat="@drawable/button_state_purple" />

                <TextView
                    android:id="@+id/btntext"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:clickable="false"
                    android:text="@string/unlock_hint"
                    android:visibility="visible"
                    android:textColor="#dddddd"
                    android:textSize="20sp" />
            </FrameLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/hint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="false"
                android:layout_margin="10dp"
                android:hint="@string/hint"
                android:textColorHint="#ffffff"
                android:visibility="gone"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/lblHintText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:cursorVisible="true"
                    android:focusable="false"
                    android:scrollbars="vertical"
                    android:textColor="#FFFFFF" />

            </com.google.android.material.textfield.TextInputLayout>
        </RelativeLayout>

        <VideoView
            android:id="@+id/videoView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
