<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:fillViewport="true"
    android:id="@+id/scrollView"
    tools:context=".Activity_Login">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <FrameLayout
            android:id="@+id/layoutTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_alignParentTop="true"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:alpha="0.5"
                android:background="#000000" />
            <ImageView
                android:id="@+id/textIcon"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:alpha=".9"
                android:layout_gravity="center"
                app:srcCompat="@drawable/cryptothon_text" />

        </FrameLayout>

        <ImageView
            android:id="@+id/imgIcon"
            android:layout_width="wrap_content"
            android:layout_height="250dp"
            android:layout_marginTop="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layoutTitle"
            app:srcCompat="@drawable/logo" />

        <ImageView
            android:id="@+id/imgEnterPwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imgIcon"
            app:srcCompat="@drawable/enter_password" />


        <EditText
            android:id="@+id/txtPwd"
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:background="@drawable/text_box1"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textAlignment="center"
            android:textColor="#dddddd"
            android:textColorHint="#808080"
            android:textSize="32sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imgEnterPwd" />

        <FrameLayout
            android:id="@+id/layoutBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtPwd"
            android:layout_marginTop="64dp"
            android:layout_alignParentTop="true"
            >

            <ImageButton
                android:id="@+id/btnLogin"
                android:layout_width="200dp"
                android:layout_height="70dp"
                android:layout_gravity="center"
                android:alpha="0.9"
                android:background="@null"
                android:contentDescription="@string/tap_to_login_into_game"
                android:onClick="onClickedLoginBtn"
                android:scaleType="fitXY"
                android:soundEffectsEnabled="false"
                app:srcCompat="@drawable/button_state_blue" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:textColor="#dddddd"
                android:textSize="20sp"
                android:layout_gravity="center"
                android:clickable="false"
                />
        </FrameLayout>

        <FrameLayout
            android:id="@+id/gifOverlay"
            android:layout_width="400dp"
            android:layout_height="920dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:background="@android:color/black">
            <VideoView
                android:id="@+id/animView2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="visible"/>
        </FrameLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>